--- a/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
+++ b/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "01 Prove : Assignment - Experiment Harness & Hardcoded Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOlhZ3nw2SIuvP8ta+BphBG",
+      "authorship_tag": "ABX9TyNf/CD8l1L1FW+iNQdn3VJi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "-BM3_uxdxt-M",
         "colab_type": "code",
-        "outputId": "8012f0dd-cf27-4359-fc9e-855d7a543c40",
+        "outputId": "5bd57998-d7ba-457f-b72c-36bcba61a584",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -71,15 +71,15 @@
         "from google.colab import files\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-e725cc64-38de-48a1-91e7-20cb4e979a61\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-e725cc64-38de-48a1-91e7-20cb4e979a61\">\n",
+              "     <input type=\"file\" id=\"files-0e25e7e8-e796-47ed-9711-074b7b467cba\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-0e25e7e8-e796-47ed-9711-074b7b467cba\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -107,7 +107,7 @@
       "metadata": {
         "id": "J5Bl-6WjxDza",
         "colab_type": "code",
-        "outputId": "407727eb-0197-41b7-f567-aa10248fcd58",
+        "outputId": "066db4cf-bdff-4b0b-d76c-079c3bb2cfe8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 197
@@ -117,7 +117,7 @@
         "iris = pd.read_csv(\"iris.data\")\n",
         "iris.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,7 +205,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -254,7 +254,7 @@
       "metadata": {
         "id": "ix96llUm2Rv_",
         "colab_type": "code",
-        "outputId": "829650fe-b95e-49d1-f7c3-d2dab7625b15",
+        "outputId": "68ed437b-ee4e-403b-cb93-2db5e7faa4d7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -268,7 +268,7 @@
         "# accuracy = y_test[Instance.predict(X_test) == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +280,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -289,7 +289,7 @@
       "metadata": {
         "id": "AJsAfT7Ez2Bc",
         "colab_type": "code",
-        "outputId": "80fdf30f-69f6-41b2-a045-12b49a1a48cb",
+        "outputId": "d313a436-463a-49fd-f6c5-6a296e0f9c58",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -307,7 +307,7 @@
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -319,7 +319,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
@@ -328,7 +328,7 @@
       "metadata": {
         "id": "C6ywntBwRMUl",
         "colab_type": "code",
-        "outputId": "3f1e799f-d27f-495f-e584-0b750a8f738d",
+        "outputId": "29159956-9861-4546-cc67-843e38cb7924",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -346,7 +346,7 @@
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -358,7 +358,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 9
         }
       ]
     },
@@ -367,10 +367,10 @@
       "metadata": {
         "id": "_XtF_PBlPD5W",
         "colab_type": "code",
-        "outputId": "d832fb13-dc93-49e4-9075-781b5de8d44d",
+        "outputId": "c12720bf-d774-4b09-f30f-1c897a2505b7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 203
+          "height": 123
         }
       },
       "source": [
@@ -388,31 +388,42 @@
         "Instance.fit(X_train, y_train)\n",
         "\n",
         "def calc_distance(self, x1, x2):\n",
-        "  return np.sqrt(sum([(x1[i] - x2[i]) ** 2 for i in range(self.training.shape[1])]))\n",
+        "  return np.sqrt(sum([(x1[i] - x2[i]) ** 2 for i in range(len(x1)-1)]))\n",
         "\n",
         "Instance.calc_distance = calc_distance.__get__(Instance)\n",
         "# Instance.calc_distance(Instance.training[0], X_test.iloc[0,:])\n",
         "\n",
-        "ls = []\n",
-        "for i in X_train:\n",
-        "  for j in X_test:\n",
-        "    ls.append(Instance.calc_distance(i, j))\n",
+        "def predict(self, data, k):\n",
+        "  distance_list = list()\n",
+        "  for train_row in self.training:\n",
+        "    distance = self.calc_distance(train_row, data)\n",
+        "    distance_list.append((train_row, distance))\n",
+        "  distance_list.sort(key = lambda x: x[1])[:k]\n",
+        "  \n",
         "\n",
-        "distance = np.reshape(ls,(X_train.shape[0], X_test.shape[0]))\n",
+        "Instance.predict = predict.__get__(Instance)\n",
+        "\n",
+        "Instance.predict(X_test[0], 3)\n",
         "\n"
       ],
-      "execution_count": 41,
+      "execution_count": 18,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-41-d8707173f3a6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0mdistance\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mls\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m \u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdistance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(array([ 1.13289373,  0.47433276, -0.99476479, -1.55200868]),\n",
+              "  0.2583088636869236),\n",
+              " (array([ 1.13289373,  0.17038154, -0.89344771, -1.60266722]),\n",
+              "  0.2774682290736454),\n",
+              " (array([ 0.98091812,  0.11972301, -0.99476479, -1.65332575]),\n",
+              "  0.295387486585502)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
         }
       ]
     },
@@ -421,11 +432,11 @@
       "metadata": {
         "id": "CVDezDkIR8j-",
         "colab_type": "code",
+        "outputId": "1d3e316d-10db-48dc-c352-3378c312dab9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "cab72cae-c282-4d90-ae5f-2258b0829bf4"
+        }
       },
       "source": [
         "# train the classifier (knn modeling)\n",
