--- a/cs450_02_python_practice.ipynb
+++ b/cs450_02_python_practice.ipynb
@@ -80,7 +80,7 @@
       "metadata": {
         "id": "TUSg-Pu0s9BR",
         "colab_type": "code",
-        "outputId": "7c7a0c05-8f7a-499f-bc2e-cc64b2701b5e",
+        "outputId": "88d73061-b49e-4274-99e5-9a4f192a0d01",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -89,7 +89,7 @@
       "source": [
         "np.sqrt((x[0] - y[0]) ** 2 + (x[1] - y[1]) ** 2)"
       ],
-      "execution_count": 3,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -101,7 +101,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 12
         }
       ]
     },
@@ -144,7 +144,7 @@
       "metadata": {
         "id": "ovFXWfiDs9BX",
         "colab_type": "code",
-        "outputId": "d3fb5599-f86a-4d71-efea-596cad15a6b0",
+        "outputId": "d40694d8-a089-491b-cd37-8aa02ddd173b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -153,7 +153,7 @@
       "source": [
         "euc_distance(x,y)"
       ],
-      "execution_count": 5,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -165,7 +165,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 14
         }
       ]
     },
@@ -186,7 +186,7 @@
       "metadata": {
         "id": "BvkC4Y8Ds9Ba",
         "colab_type": "code",
-        "outputId": "86003ed6-39d7-4c79-ba05-b74bb81a1680",
+        "outputId": "57aa8cec-815c-4a75-c027-3c243c789827",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -199,7 +199,7 @@
         "\n",
         "data_distance"
       ],
-      "execution_count": 6,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,7 +212,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 15
         }
       ]
     },
@@ -231,7 +231,7 @@
       "metadata": {
         "id": "Gm1jfTKms9Bd",
         "colab_type": "code",
-        "outputId": "0da01a98-ec3e-4e8c-c9fb-dab99fecd8b5",
+        "outputId": "820f7e07-8e9c-4b62-e8c4-b4b684876977",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -242,7 +242,7 @@
         "\n",
         "print(\"the smallest value: {}\\nthe second smallest value: {}\".format(data_distance_sorted[0], data_distance_sorted[1]))"
       ],
-      "execution_count": 7,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,31 +281,34 @@
       "metadata": {
         "id": "gC_AA9zGs9Bh",
         "colab_type": "code",
-        "outputId": "3daaa673-14b9-42ad-aac6-b11b3db02a24",
+        "outputId": "716741de-657c-4091-bb24-9efad4eab2f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
       "source": [
+        "\"\"\"\n",
         "smallest = np.where(data_distance == data_distance_sorted[0])[0][0]\n",
         "sec_smallest = np.where(data_distance == data_distance_sorted[1])[0][0]\n",
         "\n",
-        "smallest, sec_smallest"
+        "smallest, sec_smallest\n",
+        "\"\"\"\n",
+        "np.argsort(data_distance)[0]"
       ],
-      "execution_count": 8,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(3, 1)"
+              "3"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 17
         }
       ]
     },
@@ -324,7 +327,7 @@
       "metadata": {
         "id": "3L_4CuMHs9Bl",
         "colab_type": "code",
-        "outputId": "9fdad792-1839-462a-d8df-9644bf99b910",
+        "outputId": "5599e802-0e58-4734-a68a-88b718753466",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -342,9 +345,10 @@
         "\n",
         "import collections\n",
         "\n",
-        "collections.Counter(animals).most_common(1)[0][0]"
+        "collections.Counter(animals).most_common(1)\n",
+        "# collections.Counter(animals).most_common(2)"
       ],
-      "execution_count": 13,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -356,7 +360,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 18
         }
       ]
     }
