--- a/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
+++ b/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "01 Prove : Assignment - Experiment Harness & Hardcoded Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNf/CD8l1L1FW+iNQdn3VJi",
+      "authorship_tag": "ABX9TyPMTJniq/6iy/BHI/VASvjb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "-BM3_uxdxt-M",
         "colab_type": "code",
-        "outputId": "5bd57998-d7ba-457f-b72c-36bcba61a584",
+        "outputId": "40507891-795e-47fe-aea9-0ffaa7b71dea",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -71,15 +71,15 @@
         "from google.colab import files\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-0e25e7e8-e796-47ed-9711-074b7b467cba\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-0e25e7e8-e796-47ed-9711-074b7b467cba\">\n",
+              "     <input type=\"file\" id=\"files-1b51f00b-fc7c-4b07-9ce7-ba30d89ea767\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-1b51f00b-fc7c-4b07-9ce7-ba30d89ea767\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -107,7 +107,7 @@
       "metadata": {
         "id": "J5Bl-6WjxDza",
         "colab_type": "code",
-        "outputId": "066db4cf-bdff-4b0b-d76c-079c3bb2cfe8",
+        "outputId": "5e08c152-0aeb-47f6-8a27-a06dc2f3010b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 197
@@ -117,7 +117,7 @@
         "iris = pd.read_csv(\"iris.data\")\n",
         "iris.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,7 +205,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 5
         }
       ]
     },
@@ -254,7 +254,7 @@
       "metadata": {
         "id": "ix96llUm2Rv_",
         "colab_type": "code",
-        "outputId": "68ed437b-ee4e-403b-cb93-2db5e7faa4d7",
+        "outputId": "bfa70656-bf5c-4c23-f392-021eab8df152",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -268,7 +268,7 @@
         "# accuracy = y_test[Instance.predict(X_test) == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +280,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
@@ -289,7 +289,7 @@
       "metadata": {
         "id": "AJsAfT7Ez2Bc",
         "colab_type": "code",
-        "outputId": "d313a436-463a-49fd-f6c5-6a296e0f9c58",
+        "outputId": "2cbf8ce5-e0cc-478a-e033-9a5c45cf0320",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -307,7 +307,7 @@
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -319,7 +319,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 9
         }
       ]
     },
@@ -328,7 +328,7 @@
       "metadata": {
         "id": "C6ywntBwRMUl",
         "colab_type": "code",
-        "outputId": "29159956-9861-4546-cc67-843e38cb7924",
+        "outputId": "aa321df8-71a6-4074-8d79-414528f092eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -346,7 +346,7 @@
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -358,7 +358,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 10
         }
       ]
     },
@@ -367,10 +367,10 @@
       "metadata": {
         "id": "_XtF_PBlPD5W",
         "colab_type": "code",
-        "outputId": "c12720bf-d774-4b09-f30f-1c897a2505b7",
+        "outputId": "df77e7f4-6a0f-44ae-9bf4-d2cbd6e6be2a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 123
+          "height": 816
         }
       },
       "source": [
@@ -391,39 +391,82 @@
         "  return np.sqrt(sum([(x1[i] - x2[i]) ** 2 for i in range(len(x1)-1)]))\n",
         "\n",
         "Instance.calc_distance = calc_distance.__get__(Instance)\n",
-        "# Instance.calc_distance(Instance.training[0], X_test.iloc[0,:])\n",
         "\n",
-        "def predict(self, data, k):\n",
-        "  distance_list = list()\n",
-        "  for train_row in self.training:\n",
-        "    distance = self.calc_distance(train_row, data)\n",
-        "    distance_list.append((train_row, distance))\n",
-        "  distance_list.sort(key = lambda x: x[1])[:k]\n",
-        "  \n",
+        "def predict(self, test, k):\n",
+        "  prediction = [self.predict_single(test_row, k) for test_row in test]\n",
+        "  return prediction\n",
+        "    \n",
+        "\n",
+        "import collections\n",
+        "\n",
+        "def predict_single(self, test_row, k):\n",
+        "  distance_list = [self.calc_distance(test_row, i) for i in self.training]\n",
+        "  index_k = np.argsort(distance_list)[:k]\n",
+        "  return self.targets[collections.Counter(index_k).most_common(1)[0][0]]\n",
         "\n",
         "Instance.predict = predict.__get__(Instance)\n",
+        "Instance.predict_single = predict_single.__get__(Instance)\n",
         "\n",
-        "Instance.predict(X_test[0], 3)\n",
+        "Instance.predict(X_test, 3)\n",
         "\n"
       ],
-      "execution_count": 18,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[(array([ 1.13289373,  0.47433276, -0.99476479, -1.55200868]),\n",
-              "  0.2583088636869236),\n",
-              " (array([ 1.13289373,  0.17038154, -0.89344771, -1.60266722]),\n",
-              "  0.2774682290736454),\n",
-              " (array([ 0.98091812,  0.11972301, -0.99476479, -1.65332575]),\n",
-              "  0.295387486585502)]"
+              "['Iris-setosa',\n",
+              " 'Iris-versicolor',\n",
+              " 'Iris-versicolor',\n",
+              " 'Iris-setosa',\n",
+              " 'Iris-virginica',\n",
+              " 'Iris-versicolor',\n",
+              " 'Iris-versicolor',\n",
+              " 'Iris-setosa',\n",
+              " 'Iris-setosa',\n",
+              " 'Iris-virginica',\n",
+              " 'Iris-versicolor',\n",
+              " 'Iris-setosa',\n",
+              " 'Iris-virginica',\n",
+              " 'Iris-versicolor',\n",
+              " 'Iris-versicolor',\n",
+              " 'Iris-setosa',\n",
+              " 'Iris-versicolor',\n",
+              " 'Iris-versicolor',\n",
+              " 'Iris-setosa',\n",
+              " 'Iris-setosa',\n",
+              " 'Iris-versicolor',\n",
+              " 'Iris-versicolor',\n",
+              " 'Iris-virginica',\n",
+              " 'Iris-setosa',\n",
+              " 'Iris-virginica',\n",
+              " 'Iris-versicolor',\n",
+              " 'Iris-setosa',\n",
+              " 'Iris-setosa',\n",
+              " 'Iris-versicolor',\n",
+              " 'Iris-versicolor',\n",
+              " 'Iris-versicolor',\n",
+              " 'Iris-virginica',\n",
+              " 'Iris-versicolor',\n",
+              " 'Iris-virginica',\n",
+              " 'Iris-virginica',\n",
+              " 'Iris-setosa',\n",
+              " 'Iris-versicolor',\n",
+              " 'Iris-setosa',\n",
+              " 'Iris-versicolor',\n",
+              " 'Iris-virginica',\n",
+              " 'Iris-virginica',\n",
+              " 'Iris-setosa',\n",
+              " 'Iris-virginica',\n",
+              " 'Iris-virginica',\n",
+              " 'Iris-versicolor']"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 52
         }
       ]
     },
@@ -448,7 +491,7 @@
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
