--- a/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
+++ b/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "01 Prove : Assignment - Experiment Harness & Hardcoded Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPMTJniq/6iy/BHI/VASvjb",
+      "authorship_tag": "ABX9TyNjmAFo10QOCVqkc8/r26zB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -367,10 +367,10 @@
       "metadata": {
         "id": "_XtF_PBlPD5W",
         "colab_type": "code",
-        "outputId": "df77e7f4-6a0f-44ae-9bf4-d2cbd6e6be2a",
+        "outputId": "90520dae-47dc-4cf4-a553-07661adac5f4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 816
+          "height": 34
         }
       },
       "source": [
@@ -390,13 +390,10 @@
         "def calc_distance(self, x1, x2):\n",
         "  return np.sqrt(sum([(x1[i] - x2[i]) ** 2 for i in range(len(x1)-1)]))\n",
         "\n",
-        "Instance.calc_distance = calc_distance.__get__(Instance)\n",
-        "\n",
         "def predict(self, test, k):\n",
         "  prediction = [self.predict_single(test_row, k) for test_row in test]\n",
         "  return prediction\n",
         "    \n",
-        "\n",
         "import collections\n",
         "\n",
         "def predict_single(self, test_row, k):\n",
@@ -404,69 +401,28 @@
         "  index_k = np.argsort(distance_list)[:k]\n",
         "  return self.targets[collections.Counter(index_k).most_common(1)[0][0]]\n",
         "\n",
+        "Instance.calc_distance = calc_distance.__get__(Instance)\n",
         "Instance.predict = predict.__get__(Instance)\n",
         "Instance.predict_single = predict_single.__get__(Instance)\n",
         "\n",
-        "Instance.predict(X_test, 3)\n",
-        "\n"
+        "predicted_y = Instance.predict(X_test, 3)\n",
+        "\n",
+        "accuracy = accuracy_score(y_test, predicted_y)\n",
+        "accuracy"
       ],
-      "execution_count": 52,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['Iris-setosa',\n",
-              " 'Iris-versicolor',\n",
-              " 'Iris-versicolor',\n",
-              " 'Iris-setosa',\n",
-              " 'Iris-virginica',\n",
-              " 'Iris-versicolor',\n",
-              " 'Iris-versicolor',\n",
-              " 'Iris-setosa',\n",
-              " 'Iris-setosa',\n",
-              " 'Iris-virginica',\n",
-              " 'Iris-versicolor',\n",
-              " 'Iris-setosa',\n",
-              " 'Iris-virginica',\n",
-              " 'Iris-versicolor',\n",
-              " 'Iris-versicolor',\n",
-              " 'Iris-setosa',\n",
-              " 'Iris-versicolor',\n",
-              " 'Iris-versicolor',\n",
-              " 'Iris-setosa',\n",
-              " 'Iris-setosa',\n",
-              " 'Iris-versicolor',\n",
-              " 'Iris-versicolor',\n",
-              " 'Iris-virginica',\n",
-              " 'Iris-setosa',\n",
-              " 'Iris-virginica',\n",
-              " 'Iris-versicolor',\n",
-              " 'Iris-setosa',\n",
-              " 'Iris-setosa',\n",
-              " 'Iris-versicolor',\n",
-              " 'Iris-versicolor',\n",
-              " 'Iris-versicolor',\n",
-              " 'Iris-virginica',\n",
-              " 'Iris-versicolor',\n",
-              " 'Iris-virginica',\n",
-              " 'Iris-virginica',\n",
-              " 'Iris-setosa',\n",
-              " 'Iris-versicolor',\n",
-              " 'Iris-setosa',\n",
-              " 'Iris-versicolor',\n",
-              " 'Iris-virginica',\n",
-              " 'Iris-virginica',\n",
-              " 'Iris-setosa',\n",
-              " 'Iris-virginica',\n",
-              " 'Iris-virginica',\n",
-              " 'Iris-versicolor']"
+              "0.9333333333333333"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 52
+          "execution_count": 54
         }
       ]
     },
