--- a/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
+++ b/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "01 Prove : Assignment - Experiment Harness & Hardcoded Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNjmAFo10QOCVqkc8/r26zB",
+      "authorship_tag": "ABX9TyNHhZ6Q9sU3HiG7tmWcb7aK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -367,7 +367,7 @@
       "metadata": {
         "id": "_XtF_PBlPD5W",
         "colab_type": "code",
-        "outputId": "90520dae-47dc-4cf4-a553-07661adac5f4",
+        "outputId": "b6baeb03-c1c7-4581-8dd4-1bd847648893",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -385,18 +385,37 @@
         "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.3, random_state= 1)\n",
         "\n",
         "Instance = HardCodedClassifier()\n",
-        "Instance.fit(X_train, y_train)\n",
+        "\"\"\"\n",
+        "Receives: trainind data and training targets\n",
+        "Returns: None\n",
+        "\"\"\"\n",
+        "Instance.fit(X_train, y_train) # x_train and y_train\n",
         "\n",
         "def calc_distance(self, x1, x2):\n",
+        "    \"\"\"\n",
+        "    Compute and return the distance from row1 to row2\n",
+        "    Euclidean Distance\n",
+        "    \"\"\"\n",
         "  return np.sqrt(sum([(x1[i] - x2[i]) ** 2 for i in range(len(x1)-1)]))\n",
         "\n",
         "def predict(self, test, k):\n",
+        "    \"\"\"\n",
+        "    Receives: test data (a bunch of test rows)\n",
+        "    Returns: list of predictions for the targets associated with each row\n",
+        "    in the test data\n",
+        "    -- \n",
+        "    \"\"\"\n",
         "  prediction = [self.predict_single(test_row, k) for test_row in test]\n",
+        "  # Make a prediction for that row and add the prediction a list of predictions\n",
         "  return prediction\n",
         "    \n",
         "import collections\n",
         "\n",
         "def predict_single(self, test_row, k):\n",
+        "    \"\"\"\n",
+        "    Gets: A single Row\n",
+        "    Returns: The prediction for that row\n",
+        "    \"\"\"\n",
         "  distance_list = [self.calc_distance(test_row, i) for i in self.training]\n",
         "  index_k = np.argsort(distance_list)[:k]\n",
         "  return self.targets[collections.Counter(index_k).most_common(1)[0][0]]\n",
@@ -408,9 +427,9 @@
         "predicted_y = Instance.predict(X_test, 3)\n",
         "\n",
         "accuracy = accuracy_score(y_test, predicted_y)\n",
-        "accuracy"
+        "accuracy\n"
       ],
-      "execution_count": 54,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -422,7 +441,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 54
+          "execution_count": 58
         }
       ]
     },
@@ -431,7 +450,7 @@
       "metadata": {
         "id": "CVDezDkIR8j-",
         "colab_type": "code",
-        "outputId": "1d3e316d-10db-48dc-c352-3378c312dab9",
+        "outputId": "205ad99f-17bd-4d60-8417-5ce1f17ea779",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -447,7 +466,7 @@
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 0,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -459,7 +478,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 59
         }
       ]
     }
