--- a/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
+++ b/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "01 Prove : Assignment - Experiment Harness & Hardcoded Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNHhZ6Q9sU3HiG7tmWcb7aK",
+      "authorship_tag": "ABX9TyNyT5RGRw5y8+X5R+AuEZmP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "-BM3_uxdxt-M",
         "colab_type": "code",
-        "outputId": "40507891-795e-47fe-aea9-0ffaa7b71dea",
+        "outputId": "cbc06a90-c41b-4e0a-9c1e-9e45354f3d5c",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -78,8 +78,8 @@
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-1b51f00b-fc7c-4b07-9ce7-ba30d89ea767\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-1b51f00b-fc7c-4b07-9ce7-ba30d89ea767\">\n",
+              "     <input type=\"file\" id=\"files-33d461d4-a02d-4426-8f3b-c8a8307b729c\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-33d461d4-a02d-4426-8f3b-c8a8307b729c\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -107,7 +107,7 @@
       "metadata": {
         "id": "J5Bl-6WjxDza",
         "colab_type": "code",
-        "outputId": "5e08c152-0aeb-47f6-8a27-a06dc2f3010b",
+        "outputId": "fe1955c3-d610-47a9-c8da-d602946deb85",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 197
@@ -117,7 +117,7 @@
         "iris = pd.read_csv(\"iris.data\")\n",
         "iris.head()"
       ],
-      "execution_count": 5,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,7 +205,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 12
         }
       ]
     },
@@ -254,7 +254,7 @@
       "metadata": {
         "id": "ix96llUm2Rv_",
         "colab_type": "code",
-        "outputId": "bfa70656-bf5c-4c23-f392-021eab8df152",
+        "outputId": "7ba2831a-2379-4332-ed2a-d00fa835fda8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -268,7 +268,7 @@
         "# accuracy = y_test[Instance.predict(X_test) == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 8,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +280,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 15
         }
       ]
     },
@@ -289,7 +289,7 @@
       "metadata": {
         "id": "AJsAfT7Ez2Bc",
         "colab_type": "code",
-        "outputId": "2cbf8ce5-e0cc-478a-e033-9a5c45cf0320",
+        "outputId": "2a7a3c42-e947-43f4-8f6e-484e19250bb6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -307,7 +307,7 @@
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 9,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -319,7 +319,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 16
         }
       ]
     },
@@ -328,7 +328,7 @@
       "metadata": {
         "id": "C6ywntBwRMUl",
         "colab_type": "code",
-        "outputId": "aa321df8-71a6-4074-8d79-414528f092eb",
+        "outputId": "f4063a2d-fd5f-45fd-9e97-a6d47e75f33d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -346,7 +346,7 @@
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 10,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -358,7 +358,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 17
         }
       ]
     },
@@ -367,7 +367,7 @@
       "metadata": {
         "id": "_XtF_PBlPD5W",
         "colab_type": "code",
-        "outputId": "b6baeb03-c1c7-4581-8dd4-1bd847648893",
+        "outputId": "ce187238-5f40-4a12-e63f-e86cd9a48b0b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -392,33 +392,34 @@
         "Instance.fit(X_train, y_train) # x_train and y_train\n",
         "\n",
         "def calc_distance(self, x1, x2):\n",
-        "    \"\"\"\n",
-        "    Compute and return the distance from row1 to row2\n",
-        "    Euclidean Distance\n",
-        "    \"\"\"\n",
         "  return np.sqrt(sum([(x1[i] - x2[i]) ** 2 for i in range(len(x1)-1)]))\n",
+        "\"\"\"\n",
+        "Compute and return the distance from row1 to row2\n",
+        "Euclidean Distance\n",
+        "\"\"\"\n",
         "\n",
         "def predict(self, test, k):\n",
-        "    \"\"\"\n",
-        "    Receives: test data (a bunch of test rows)\n",
-        "    Returns: list of predictions for the targets associated with each row\n",
-        "    in the test data\n",
-        "    -- \n",
-        "    \"\"\"\n",
         "  prediction = [self.predict_single(test_row, k) for test_row in test]\n",
         "  # Make a prediction for that row and add the prediction a list of predictions\n",
         "  return prediction\n",
+        "\"\"\"\n",
+        "Receives: test data (a bunch of test rows)\n",
+        "Returns: list of predictions for the targets associated with each row\n",
+        "in the test data\n",
+        "-- \n",
+        "\"\"\"\n",
         "    \n",
         "import collections\n",
         "\n",
         "def predict_single(self, test_row, k):\n",
-        "    \"\"\"\n",
-        "    Gets: A single Row\n",
-        "    Returns: The prediction for that row\n",
-        "    \"\"\"\n",
         "  distance_list = [self.calc_distance(test_row, i) for i in self.training]\n",
         "  index_k = np.argsort(distance_list)[:k]\n",
         "  return self.targets[collections.Counter(index_k).most_common(1)[0][0]]\n",
+        "\n",
+        "\"\"\"\n",
+        "Gets: A single Row\n",
+        "Returns: The prediction for that row\n",
+        "\"\"\"\n",
         "\n",
         "Instance.calc_distance = calc_distance.__get__(Instance)\n",
         "Instance.predict = predict.__get__(Instance)\n",
@@ -429,7 +430,7 @@
         "accuracy = accuracy_score(y_test, predicted_y)\n",
         "accuracy\n"
       ],
-      "execution_count": 58,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -441,7 +442,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 58
+          "execution_count": 22
         }
       ]
     },
@@ -450,7 +451,7 @@
       "metadata": {
         "id": "CVDezDkIR8j-",
         "colab_type": "code",
-        "outputId": "205ad99f-17bd-4d60-8417-5ce1f17ea779",
+        "outputId": "823c4318-e512-423b-8744-ff9449178145",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -466,7 +467,7 @@
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 59,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -478,9 +479,27 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 59
+          "execution_count": 23
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HgioWHhZ3AlP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.neighbors import KDTree\n",
+        "\n",
+        "tree = KDTree(X, leaf_size=2)\n",
+        "\n",
+        "dist, ind = tree.query(X[:4], k=3)\n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
