--- a/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
+++ b/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "01 Prove : Assignment - Experiment Harness & Hardcoded Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNyT5RGRw5y8+X5R+AuEZmP",
+      "authorship_tag": "ABX9TyMghsb3CDOpuoowyHPsvcar",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -367,7 +367,7 @@
       "metadata": {
         "id": "_XtF_PBlPD5W",
         "colab_type": "code",
-        "outputId": "ce187238-5f40-4a12-e63f-e86cd9a48b0b",
+        "outputId": "8297c4ed-baae-49df-c2e4-d2f9857e290a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -414,7 +414,7 @@
         "def predict_single(self, test_row, k):\n",
         "  distance_list = [self.calc_distance(test_row, i) for i in self.training]\n",
         "  index_k = np.argsort(distance_list)[:k]\n",
-        "  return self.targets[collections.Counter(index_k).most_common(1)[0][0]]\n",
+        "  return collections.Counter(self.targets[index_k]).most_common(1)[0][0]\n",
         "\n",
         "\"\"\"\n",
         "Gets: A single Row\n",
@@ -425,24 +425,24 @@
         "Instance.predict = predict.__get__(Instance)\n",
         "Instance.predict_single = predict_single.__get__(Instance)\n",
         "\n",
-        "predicted_y = Instance.predict(X_test, 3)\n",
+        "predicted_y = Instance.predict(X_test, 5)\n",
         "\n",
         "accuracy = accuracy_score(y_test, predicted_y)\n",
         "accuracy\n"
       ],
-      "execution_count": 22,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.9333333333333333"
+              "0.9111111111111111"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 49
         }
       ]
     },
@@ -488,18 +488,41 @@
       "metadata": {
         "id": "HgioWHhZ3AlP",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "bb4c0cc8-f10a-4f3e-fd81-2a96571f1e78"
       },
       "source": [
         "from sklearn.neighbors import KDTree\n",
         "\n",
-        "tree = KDTree(X, leaf_size=2)\n",
+        "tree = KDTree(X_train, leaf_size=2)\n",
         "\n",
-        "dist, ind = tree.query(X[:4], k=3)\n",
-        "\n"
+        "dist, ind = tree.query(X_test, k=3)\n",
+        "\n",
+        "predicted_y = [collections.Counter(i).most_common(1)[0][0] for i in y_train[ind]]\n",
+        "\n",
+        "predicted_y\n",
+        "accuracy = accuracy_score(y_test, predicted_y)\n",
+        "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
+        "accuracy"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9777777777777777"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 51
+        }
+      ]
     }
   ]
 }
